--- a/scss/modules/_placeholders.scss
+++ b/scss/modules/_placeholders.scss
@@ -1,10 +1,10 @@
 %text {
   font-size: 1em;
-  line-height: 1.5;
+  line-height: 1.25;
   margin: 0;
-  padding: 1em;
+  padding: 1em 2em;
 
-  @media (min-width: 40em) {
+  @media (min-width: 45em) {
     padding-left: calc(50% - 20em);
     padding-right: calc(50% - 20em);
   }
