--- a/scss/partials/_typography.scss
+++ b/scss/partials/_typography.scss
@@ -3,3 +3,29 @@
   font-size: 1em;
   hyphens: auto;
 }
+
+.caps {
+  font-family: 'Fontin Sans Small Caps';
+  text-transform: lowercase;
+}
+
+.dquo {
+  margin-left: -0.4em;
+}
+
+.quo {
+  margin-left: -0.3em;
+}
+
+ul, ol {
+  margin: 2em 0;
+  padding: 0;
+
+  ul, ol {
+    margin: 1em 0 0 2em;
+  }
+
+  li {
+    margin-bottom: 1em;
+  }
+}
