--- a/scss/modules/_placeholders.scss
+++ b/scss/modules/_placeholders.scss
@@ -15,3 +15,42 @@
     padding-right: 25vw;
   }
 }
+
+%h1 {
+  font-family: 'Fontin Sans Small Caps';
+  font-size: 2.618em;
+  font-weight: normal;
+  margin: 1em 0;
+
+  @media (min-width: 83em) {
+    font-size: 3.27vw;
+  }
+}
+
+%h2 {
+  font-family: 'Fontin Sans';
+  font-size: 1.618em;
+  font-weight: normal;
+  margin: 1.618em 0 1em 0;
+
+  @media (min-width: 83em) {
+    font-size: 2.02vw;
+  }
+}
+
+%h3 {
+  font-weight: bold;
+  margin: 1.618em 0 0.618em 0;
+}
+
+%h4 {
+  font-family: 'Fontin Sans Small Caps';
+  font-weight: normal;
+  margin: 1.618em 0 0.618em 0;
+}
+
+%h5 {
+  font-style: italic;
+  font-weight: normal;
+  margin: 1em 0 0.618em 0;
+}
