--- a/scss/partials/_typography.scss
+++ b/scss/partials/_typography.scss
@@ -4,6 +4,12 @@
   hyphens: auto;
 }
 
+h1 { @extend %h1; }
+h2 { @extend %h2; }
+h3 { @extend %h3; }
+h4 { @extend %h4; }
+h5 { @extend %h5; }
+
 .caps {
   font-family: 'Fontin Sans Small Caps';
   text-transform: lowercase;
