--- a/scss/style.scss
+++ b/scss/style.scss
@@ -30,5 +30,6 @@
   @import 'layouts/main';
 
   @import 'components/table';
+  @import 'components/palette';
   @import 'components/panel-link';
 }
