--- a/scss/style.scss
+++ b/scss/style.scss
@@ -29,6 +29,7 @@
 
   @import 'layouts/main';
 
+  @import 'components/hr';
   @import 'components/table';
   @import 'components/palette';
   @import 'components/panel-link';
