--- a/scss/modules/_placeholders.scss
+++ b/scss/modules/_placeholders.scss
@@ -54,3 +54,11 @@
   font-weight: normal;
   margin: 1em 0 0.618em 0;
 }
+
+%hr {
+  background: $yellow;
+  border: 0;
+  display: block;
+  height: 0.1em;
+  margin: 2.618em 0;
+}
