--- a/scss/partials/_typography.scss
+++ b/scss/partials/_typography.scss
@@ -4,11 +4,11 @@
   hyphens: auto;
 }
 
-h1 { @extend %h1; }
-h2 { @extend %h2; }
-h3 { @extend %h3; }
-h4 { @extend %h4; }
-h5 { @extend %h5; }
+h1, .h1like { @extend %h1; }
+h2, .h2like { @extend %h2; }
+h3, .h3like { @extend %h3; }
+h4, .h4like { @extend %h4; }
+h5, .h5like { @extend %h5; }
 
 .caps {
   font-family: 'Fontin Sans Small Caps';
