Details markup component
Normally this would get its own branch, but that's getting a little meta.

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -30,6 +30,7 @@
   @import 'layouts/main';
 
   @import 'components/breadcrumbs';
+  @import 'components/details-markup';
   @import 'components/hr';
   @import 'components/table';
   @import 'components/palette';
