--- a/scss/style.scss
+++ b/scss/style.scss
@@ -32,6 +32,7 @@
   @import 'components/breadcrumbs';
   @import 'components/details-markup';
   @import 'components/hr';
+  @import 'components/html/link';
   @import 'components/table';
   @import 'components/palette';
   @import 'components/panel-link';
