Add a little cleanup around components

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -36,6 +36,7 @@
   @import 'components/navigation/breadcrumbs';
   @import 'components/navigation/panel-link';
 
+  @import 'components/meta/component';
   @import 'components/meta/details-markup';
   @import 'components/meta/palette';
 }
