--- a/scss/components/meta/_details-markup.scss
+++ b/scss/components/meta/_details-markup.scss
@@ -14,6 +14,9 @@ details.markup {
   code {
     border-top: 1px solid $brown13;
     display: block;
+    max-height: 20em;
+    overflow: scroll;
     padding: 1em 1.618em;
+    white-space: pre;
   }
 }
