Adapt to base link styles

--- a/scss/components/navigation/_panel-link.scss
+++ b/scss/components/navigation/_panel-link.scss
@@ -3,6 +3,7 @@ a.panel {
   border: 1px solid transparent;
   color: $black;
   display: block;
+  font-weight: normal;
   margin: 0 -2em;
   padding: 1em 2em;
   text-decoration: none;
