--- a/scss/style.scss
+++ b/scss/style.scss
@@ -33,6 +33,8 @@
   @import 'components/html/link';
   @import 'components/html/table';
 
+  @import 'components/form/select';
+
   @import 'components/navigation/breadcrumbs';
   @import 'components/navigation/panel-link';
 
