Fixing some bugs left in select styling...

--- a/scss/components/form/_select.scss
+++ b/scss/components/form/_select.scss
@@ -7,10 +7,10 @@ select::-ms-expand {
 }
 
 optgroup {
-  font-family: 'Fontin Sans Small Caps';
-  font-weight: normal;
+  font-style: normal;
 }
 
 option {
+  font-family: 'Fontin Sans';
   font-weight: normal;
 }
