--- a/scss/style.scss
+++ b/scss/style.scss
@@ -33,6 +33,7 @@
   @import 'components/html/link';
   @import 'components/html/table';
 
+  @import 'components/form/input';
   @import 'components/form/select';
 
   @import 'components/navigation/breadcrumbs';
