--- a/scss/style.scss
+++ b/scss/style.scss
@@ -35,6 +35,7 @@
 
   @import 'components/form/label';
   @import 'components/form/input';
+  @import 'components/form/textarea';
   @import 'components/form/select';
 
   @import 'components/navigation/breadcrumbs';
