--- a/scss/components/html/_button.scss
+++ b/scss/components/html/_button.scss
@@ -3,3 +3,11 @@ a.button,
 input[type="button"] {
   @extend %button;
 }
+
+.buttons {
+  button,
+  a.button,
+  input[type="button"] {
+    margin: 0 0.618em 0.618em 0;
+  }
+}
