--- a/scss/modules/_placeholders.scss
+++ b/scss/modules/_placeholders.scss
@@ -75,6 +75,7 @@
 %form-field {
   appearance: none;
   border: 0.1em solid $brown13;
+  border-radius: $border-radius-tall;
   display: block;
   font-family: 'Fontin';
   font-size: 1em;
