--- a/scss/components/navigation/_panel-link.scss
+++ b/scss/components/navigation/_panel-link.scss
@@ -1,6 +1,7 @@
 a.panel {
   background: transparent;
   border: 1px solid transparent;
+  border-radius: $border-radius-tall;
   color: $black;
   display: block;
   font-weight: normal;
