--- a/scss/style.scss
+++ b/scss/style.scss
@@ -38,6 +38,7 @@
   @import 'components/form/input';
   @import 'components/form/textarea';
   @import 'components/form/select';
+  @import 'components/form/checkbox';
 
   @import 'components/navigation/breadcrumbs';
   @import 'components/navigation/panel-link';
