Add to documentation

--- a/scss/components/meta/_palette.scss
+++ b/scss/components/meta/_palette.scss
@@ -6,6 +6,7 @@
 
   .red h3 { background: $red; }
   .blue h3 { background: $blue; }
+  .purple h3 { background: $purple; }
   .green h3 { background: $green; }
   .brown h3 { background: $brown; }
   .yellow h3 { background: $yellow; }
