Use purple for visited links

--- a/scss/components/html/_link.scss
+++ b/scss/components/html/_link.scss
@@ -1,9 +1,8 @@
 a {
   color: $blue;
   font-weight: bold;
-  transition: 0.1s ease-in-out;
 
-  &:visited { color: $black; }
+  &:visited { color: $purple; }
   &:hover { color: $yellow; }
   &:active { color: $red; }
 }
