Change breadcrumb links

--- a/scss/components/navigation/_breadcrumbs.scss
+++ b/scss/components/navigation/_breadcrumbs.scss
@@ -11,4 +11,10 @@
     content: '>';
     margin: 0 1em;
   }
+
+  a {
+    color: $black;
+    font-weight: normal;
+    text-decoration: none;
+  }
 }
