--- a/scss/modules/_placeholders.scss
+++ b/scss/modules/_placeholders.scss
@@ -58,8 +58,10 @@
 %hr {
   background: url(/img/divider.png) no-repeat center;
   background-size: contain;
+  border: 0;
   display: block;
   height: 25px;
+  margin: 2.618em 0;
   width: 100%;
 }
 
