--- a/scss/style.scss
+++ b/scss/style.scss
@@ -29,6 +29,7 @@
 
   @import 'layouts/main';
 
+  @import 'components/html/aside';
   @import 'components/html/hr';
   @import 'components/html/link';
   @import 'components/html/button';
