--- a/scss/style.scss
+++ b/scss/style.scss
@@ -40,6 +40,7 @@
   @import 'components/form/textarea';
   @import 'components/form/select';
   @import 'components/form/checkbox';
+  @import 'components/form/input-button';
 
   @import 'components/navigation/breadcrumbs';
   @import 'components/navigation/panel-link';
