--- a/scss/style.scss
+++ b/scss/style.scss
@@ -37,6 +37,7 @@
   @import 'layouts/header';
   @import 'layouts/footer';
   @import 'layouts/standard';
+  @import 'layouts/stack';
 
   @import 'components/form/label';
   @import 'components/form/input';
