--- a/templates/standard.html
+++ b/templates/standard.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>The Fifth World Design System: Components</title>
+    <title>The Fifth World Design System: Standard Template</title>
     <link rel="icon" href="/img/icons/favicon.svg" />
     <link rel=”mask-icon” href=”/img/icons/favicon.svg” color=”#000000" />
     <link rel="apple-touch-icon" href="/img/apple-touch-icon.png" />
