--- a/scss/style.scss
+++ b/scss/style.scss
@@ -49,6 +49,8 @@
   @import 'components/navigation/breadcrumbs';
   @import 'components/navigation/panel-link';
 
+  @import 'components/content/map';
+
   @import 'components/meta/component';
   @import 'components/meta/details-markup';
   @import 'components/meta/palette';
