Map page layout

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -38,6 +38,7 @@
   @import 'layouts/footer';
   @import 'layouts/standard';
   @import 'layouts/stack';
+  @import 'layouts/map';
 
   @import 'components/form/label';
   @import 'components/form/input';
