--- a/templates/map.html
+++ b/templates/map.html
@@ -28,7 +28,7 @@
         </a>
       </h1>
     </header>
-    <main class="leaflet-wrapper">
+    <main class="leaflet-wrapper world">
       <div class="no-js">
         <p>You&rsquo;ll need JavaScript to use the interactive map, but something has gone wrong. If you&rsquo;ve deliberately blocked JavaScript, you&rsquo;ll need to enable it to use this feature. If not, something else may have gone wrong. Try reloading the page. Or start by browsing through these&nbsp;pages:</p>
         <ul class="continents">
