--- a/scss/modules/_placeholders.scss
+++ b/scss/modules/_placeholders.scss
@@ -17,11 +17,11 @@
 }
 
 %breakout {
-  margin: 0 -2em;
+  margin: 0 -2.6666em;
 
   @media (min-width: 45em) {
-    margin-left: calc((50% - 20em) * -1);
-    margin-right: calc((50% - 20em) * -1);
+    margin-left: calc(-50vw + 27.3333em);
+    margin-right: calc(-50vw + 27.3333em);
   }
 
   @media (min-width: 83em) {
