--- a/scss/components/content/_map.scss
+++ b/scss/components/content/_map.scss
@@ -58,6 +58,11 @@
     }
   }
 
+  &.place {
+    height: 0;
+    padding-top: 0;
+  }
+
   &.initialized {
     background: inherit;
     overflow: hidden;
