Expand and collapse content

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -52,6 +52,8 @@
 
   @import 'components/content/map';
 
+  @import 'components/interactive/collapsible';
+
   @import 'components/meta/component';
   @import 'components/meta/details-markup';
   @import 'components/meta/palette';
