--- a/scss/style.scss
+++ b/scss/style.scss
@@ -28,6 +28,7 @@
   @import 'partials/typography';
 
   @import 'components/html/aside';
+  @import 'components/html/blockquote';
   @import 'components/html/hr';
   @import 'components/html/link';
   @import 'components/html/button';
