--- a/scss/style.scss
+++ b/scss/style.scss
@@ -31,6 +31,7 @@
   @import 'components/html/blockquote';
   @import 'components/html/hr';
   @import 'components/html/link';
+  @import 'components/html/list';
   @import 'components/html/button';
   @import 'components/html/table';
 
