--- a/scss/style.scss
+++ b/scss/style.scss
@@ -30,6 +30,7 @@
   @import 'components/html/aside';
   @import 'components/html/blockquote';
   @import 'components/html/hr';
+  @import 'components/html/img';
   @import 'components/html/link';
   @import 'components/html/list';
   @import 'components/html/button';
