--- a/scss/style.scss
+++ b/scss/style.scss
@@ -29,6 +29,7 @@
 
   @import 'components/html/aside';
   @import 'components/html/blockquote';
+  @import 'components/html/figure';
   @import 'components/html/hr';
   @import 'components/html/img';
   @import 'components/html/link';
