--- a/scss/style.scss
+++ b/scss/style.scss
@@ -55,6 +55,7 @@
   @import 'components/navigation/panel-link';
 
   @import 'components/content/map';
+  @import 'components/content/video';
 
   @import 'components/interactive/collapsible';
 
