--- a/scss/style.scss
+++ b/scss/style.scss
@@ -54,6 +54,7 @@
   @import 'components/navigation/breadcrumbs';
   @import 'components/navigation/panel-link';
 
+  @import 'components/content/file-download';
   @import 'components/content/map';
   @import 'components/content/video';
 
