Initializing & styling drag-and-drop label

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -59,6 +59,7 @@
   @import 'components/content/video';
 
   @import 'components/interactive/collapsible';
+  @import 'components/interactive/file-upload';
 
   @import 'components/meta/component';
   @import 'components/meta/details-markup';
