--- a/scss/modules/_placeholders.scss
+++ b/scss/modules/_placeholders.scss
@@ -1,3 +1,31 @@
+@mixin button-color ($bg, $fg) {
+  background: $bg;
+  border: 0.1em solid $bg;
+  color: $fg;
+
+  &:visited {
+    color: $fg;
+  }
+
+  &:hover,
+  &:focus {
+    background: lighten($bg, 5%);
+    border: 0.1em solid lighten($bg, 5%);
+    color: $fg;
+  }
+
+  &:active {
+    background: darken($bg, 5%);
+    border: 0.1em solid darken($bg, 5%);
+    color: transparentize($fg, 0.3333);
+  }
+
+  &.secondary {
+    background: $fg;
+    color: $bg;
+  }
+}
+
 %text {
   font-size: 1em;
   line-height: 1.25;
@@ -123,11 +151,9 @@
 }
 
 %button {
+  @include button-color($red, $white);
   appearance: none;
-  background: $red;
-  border: 0.1em solid $red;
   border-radius: $border-radius-long 0;
-  color: $white;
   cursor: pointer;
   display: inline-block;
   font-family: 'Fontin Sans';
@@ -138,28 +164,6 @@
   text-decoration: none;
   transition: 0.1s ease-in-out;
   width: auto;
-
-  &:visited {
-    color: $white;
-  }
-
-  &:hover,
-  &:focus {
-    background: lighten($red, 5%);
-    border: 0.1em solid lighten($red, 5%);
-    color: $white;
-  }
-
-  &:active {
-    background: darken($red, 5%);
-    border: 0.1em solid darken($red, 5%);
-    color: $white23;
-  }
-
-  &.secondary {
-    background: $white;
-    color: $red;
-  }
 
   &[disabled] {
     background: $black16;
