--- a/scss/style.scss
+++ b/scss/style.scss
@@ -50,6 +50,7 @@
   @import 'components/form/select';
   @import 'components/form/checkbox';
   @import 'components/form/input-button';
+  @import 'components/form/login';
 
   @import 'components/navigation/breadcrumbs';
   @import 'components/navigation/panel-link';
