--- a/scss/style.scss
+++ b/scss/style.scss
@@ -51,6 +51,7 @@
   @import 'components/form/checkbox';
   @import 'components/form/input-button';
   @import 'components/form/login';
+  @import 'components/form/autocomplete';
 
   @import 'components/navigation/breadcrumbs';
   @import 'components/navigation/panel-link';
