--- a/scss/style.scss
+++ b/scss/style.scss
@@ -25,6 +25,7 @@
   margin: 0;
   padding: 0;
 
+  @import 'partials/general';
   @import 'partials/typography';
 
   @import 'components/html/aside';
