If we're using the default path, hide the input

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -53,6 +53,7 @@
   @import 'components/form/input-button';
   @import 'components/form/login';
   @import 'components/form/autocomplete';
+  @import 'components/form/path';
 
   @import 'components/navigation/breadcrumbs';
   @import 'components/navigation/panel-link';
