--- a/scss/style.scss
+++ b/scss/style.scss
@@ -58,6 +58,7 @@
   @import 'components/navigation/breadcrumbs';
   @import 'components/navigation/panel-link';
 
+  @import 'components/content/error';
   @import 'components/content/file-download';
   @import 'components/content/map';
   @import 'components/content/video';
