--- a/scss/style.scss
+++ b/scss/style.scss
@@ -60,6 +60,7 @@
   @import 'components/navigation/panel-link';
 
   @import 'components/content/error';
+  @import 'components/content/like-unlike';
   @import 'components/content/file-download';
   @import 'components/content/map';
   @import 'components/content/video';
