--- a/scss/style.scss
+++ b/scss/style.scss
@@ -65,6 +65,7 @@
   @import 'components/content/map';
   @import 'components/content/video';
   @import 'components/content/collapsible';
+  @import 'components/content/recent-updates';
 
   @import 'components/meta/component';
   @import 'components/meta/details-markup';
