--- a/scss/style.scss
+++ b/scss/style.scss
@@ -66,6 +66,7 @@
   @import 'components/content/video';
   @import 'components/content/collapsible';
   @import 'components/content/recent-updates';
+  @import 'components/content/page-history';
 
   @import 'components/meta/component';
   @import 'components/meta/details-markup';
