--- a/scss/style.scss
+++ b/scss/style.scss
@@ -67,6 +67,7 @@
   @import 'components/content/collapsible';
   @import 'components/content/recent-updates';
   @import 'components/content/page-history';
+  @import 'components/content/diff';
 
   @import 'components/meta/component';
   @import 'components/meta/details-markup';
