--- a/scss/style.scss
+++ b/scss/style.scss
@@ -69,6 +69,7 @@
   @import 'components/content/recent-updates';
   @import 'components/content/page-history';
   @import 'components/content/diff';
+  @import 'components/content/create';
 
   @import 'components/meta/component';
   @import 'components/meta/details-markup';
