--- a/scss/style.scss
+++ b/scss/style.scss
@@ -70,6 +70,7 @@
   @import 'components/content/page-history';
   @import 'components/content/diff';
   @import 'components/content/create';
+  @import 'components/content/action-columns';
 
   @import 'components/meta/component';
   @import 'components/meta/details-markup';
