--- a/scss/style.scss
+++ b/scss/style.scss
@@ -62,7 +62,6 @@
   @import 'components/content/like-unlike';
   @import 'components/content/file-download';
   @import 'components/content/map';
-  @import 'components/content/video';
   @import 'components/content/collapsible';
   @import 'components/content/recent-updates';
   @import 'components/content/page-history';
@@ -72,6 +71,7 @@
 
   @import 'components/media/figure';
   @import 'components/media/img';
+  @import 'components/media/video';
 
   @import 'components/meta/component';
   @import 'components/meta/details-markup';
