--- a/scss/style.scss
+++ b/scss/style.scss
@@ -71,6 +71,7 @@
 
   @import 'components/media/figure';
   @import 'components/media/img';
+  @import 'components/media/thumbnail-gallery';
   @import 'components/media/video';
 
   @import 'components/meta/component';
