--- a/scss/components/form/_login.scss
+++ b/scss/components/form/_login.scss
@@ -52,7 +52,7 @@
     form input {
       margin-left: 0;
       margin-right: 0;
-      width: calc(100% - 3.036em);
+      width: 100%;
     }
   }
 }
