--- a/templates/stack.html
+++ b/templates/stack.html
@@ -23,7 +23,7 @@
       </nav>
       <h1 class="logo">
         <a href="../index.html">
-          <img src="/img/wordmark.white.svg" alt="The Fifth World" />
+          <img src="https://thefifthworld.s3.us-east-2.stackpathstorage.com/design/img/wordmark.white.svg" alt="The Fifth World" />
         </a>
       </h1>
       <p class="cta"><a href="#" class="cta button">Watch the Trailer</a></p>
