--- a/scss/layouts/_footer.scss
+++ b/scss/layouts/_footer.scss
@@ -1,6 +1,6 @@
 @mixin icon ($icon) {
   & a:before {
-    background: url(/img/icons/black/#{$icon}.svg) no-repeat center;
+    background: url(#{$icons}/black/#{$icon}.svg) no-repeat center;
     background-size: contain;
   }
 
@@ -17,7 +17,7 @@
 
   &.current a:before,
   & a:hover:before {
-    background: url(/img/icons/white/#{$icon}.svg) no-repeat center;
+    background: url(#{$icons}/white/#{$icon}.svg) no-repeat center;
     background-size: contain;
   }
 }
@@ -110,7 +110,7 @@ footer {
   }
 
   &:before {
-    background: url(/img/footer.png) repeat-x bottom center;
+    background: url(#{$img}/footer.png) repeat-x bottom center;
     content: '';
     display: block;
     height: 30px;
