--- a/scss/layouts/_standard.scss
+++ b/scss/layouts/_standard.scss
@@ -1,5 +1,5 @@
 & {
-  background: url(/img/headers/forest.jpg) no-repeat top center;
+  background: url(#{$img}/headers/forest.jpg) no-repeat top center;
   background-size: contain;
   display: flex;
   flex-direction: column;
@@ -7,7 +7,7 @@
 }
 
 &.mountains {
-  background-image: url(/img/headers/mountains.jpg);
+  background-image: url(#{$img}/headers/mountains.jpg);
 }
 
 main {
