--- a/scss/modules/_placeholders.scss
+++ b/scss/modules/_placeholders.scss
@@ -110,7 +110,7 @@
 }
 
 %hr {
-  background: url(/img/divider.png) no-repeat center;
+  background: url(#{$img}/divider.png) no-repeat center;
   background-size: contain;
   border: 0;
   display: block;
