--- a/templates/map.html
+++ b/templates/map.html
@@ -24,7 +24,7 @@
       </nav>
       <h1 class="logo">
         <a href="../index.html">
-          <img src="/img/wordmark.black.svg" alt="The Fifth World" />
+          <img src="https://thefifthworld.s3.us-east-2.stackpathstorage.com/design/img/wordmark.black.svg" alt="The Fifth World" />
         </a>
       </h1>
     </header>
