--- a/templates/map.html
+++ b/templates/map.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <title>The Fifth World Design System: Standard Template</title>
-    <link rel="icon" href="/img/icons/favicon.svg" />
-    <link rel=”mask-icon” href=”/img/icons/favicon.svg” color=”#000000" />
-    <link rel="apple-touch-icon" href="/img/apple-touch-icon.png" />
+    <link rel="icon" href="https://thefifthworld.s3.us-east-2.stackpathstorage.com/design/favicon.svg" />
+    <link rel=”mask-icon” href=”https://thefifthworld.s3.us-east-2.stackpathstorage.com/design/favicon.svg” color=”#000000" />
+    <link rel="apple-touch-icon" href="https://thefifthworld.s3.us-east-2.stackpathstorage.com/design/img/apple-touch-icon.png" />
     <link rel="stylesheet" media="all" href="/css/style.css" />
     <link rel="stylesheet" media="all" href="/css/prism.css" />
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css" integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ==" crossorigin="" />
