--- a/scss/style.scss
+++ b/scss/style.scss
@@ -68,6 +68,7 @@
   @import 'components/content/diff';
   @import 'components/content/create';
   @import 'components/content/action-columns';
+  @import 'components/content/social-media';
 
   @import 'components/media/figure';
   @import 'components/media/img';
