Add some white space above site nav

--- a/scss/layouts/_footer.scss
+++ b/scss/layouts/_footer.scss
@@ -27,6 +27,7 @@ nav.site {
   bottom: 0;
   box-shadow: 0 0 0.618em 0 rgba(0, 0, 0, 0.618);
   left: 0;
+  margin-top: 2.618em;
   padding-top: 0;
   padding-bottom: 0;
   position: fixed;
