--- a/scss/style.scss
+++ b/scss/style.scss
@@ -59,6 +59,7 @@
   @import 'components/navigation/panel-link';
 
   @import 'components/content/error';
+  @import 'components/content/messages';
   @import 'components/content/like-unlike';
   @import 'components/content/file-download';
   @import 'components/content/map';
