--- a/scss/style.scss
+++ b/scss/style.scss
@@ -57,6 +57,7 @@
 
   @import 'components/navigation/breadcrumbs';
   @import 'components/navigation/panel-link';
+  @import 'components/navigation/page-actions';
 
   @import 'components/content/error';
   @import 'components/content/messages';
