--- a/scss/style.scss
+++ b/scss/style.scss
@@ -54,6 +54,7 @@
   @import 'components/form/autocomplete';
   @import 'components/form/path';
   @import 'components/form/file-upload';
+  @import 'components/form/page-form';
 
   @import 'components/navigation/breadcrumbs';
   @import 'components/navigation/panel-link';
