--- a/scss/components/form/_textarea.scss
+++ b/scss/components/form/_textarea.scss
@@ -2,3 +2,10 @@ textarea {
   @extend %form-field;
   height: 8em;
 }
+
+textarea + .char-count {
+  color: $brown23;
+  font-family: 'Fontin Sans';
+  margin-top: -0.618em;
+  text-align: right;
+}
