Fix colors on links in message boxes
We can just make them match the text.

--- a/scss/components/content/_messages.scss
+++ b/scss/components/content/_messages.scss
@@ -7,7 +7,17 @@ aside.message {
     margin-top: -1em;
   }
 
+  a {
+    color: $white;
+  }
+
   &.confirm { background: $green; }
-  &.warning { background: $yellow; color: $black; }
   &.error { background: $red; }
+
+  &.warning {
+    background: $yellow;
+    color: $black;
+
+    a { color: $black; }
+  }
 }
