Click anywhere in the widget

--- a/scss/components/content/_like-unlike.scss
+++ b/scss/components/content/_like-unlike.scss
@@ -7,6 +7,10 @@
   padding: 0.618em 1em;
   width: 16.18em;
 
+  &.initialized {
+    cursor: pointer;
+  }
+
   a {
     color: $brown;
     display: inline-block;
