--- a/scss/components/form/_file-upload.scss
+++ b/scss/components/form/_file-upload.scss
@@ -10,8 +10,8 @@ input[type="file"].initialized {
   display: block;
   font-family: 'Fontin Sans';
   font-weight: normal;
-  margin: 1em 0;
-  padding: 4.236em;
+  margin: 1.618em -1.618em;
+  padding: 4.236em 1.618em;
   text-align: center;
 
   strong {
