--- a/scss/style.scss
+++ b/scss/style.scss
@@ -73,8 +73,9 @@
   @import 'components/content/action-columns';
   @import 'components/content/social-media';
 
-  @import 'components/media/figure';
   @import 'components/media/img';
+  @import 'components/media/figure';
+  @import 'components/media/image-preview';
   @import 'components/media/thumbnail-gallery';
   @import 'components/media/artist-listing';
   @import 'components/media/video';
