--- a/scss/style.scss
+++ b/scss/style.scss
@@ -78,6 +78,7 @@
   @import 'components/media/image-preview';
   @import 'components/media/thumbnail-gallery';
   @import 'components/media/artist-listing';
+  @import 'components/media/novel-listing';
   @import 'components/media/video';
 
   @import 'components/meta/component';
