--- a/scss/style.scss
+++ b/scss/style.scss
@@ -76,6 +76,7 @@
   @import 'components/media/img';
   @import 'components/media/figure';
   @import 'components/media/image-preview';
+  @import 'components/media/cover';
   @import 'components/media/thumbnail-gallery';
   @import 'components/media/artist-listing';
   @import 'components/media/novel-listing';
