Fix diff column width

--- a/scss/components/content/_diff.scss
+++ b/scss/components/content/_diff.scss
@@ -1,6 +1,11 @@
 table.diff {
   font-family: 'Fontin Sans';
 
+  th,
+  td {
+    width: 50%;
+  }
+
   tr:nth-child(even) td {
     background: transparent;
   }
