--- a/scss/style.scss
+++ b/scss/style.scss
@@ -82,6 +82,8 @@
   @import 'components/media/novel-listing';
   @import 'components/media/video';
 
+  @import 'components/server/pulse';
+
   @import 'components/meta/component';
   @import 'components/meta/details-markup';
   @import 'components/meta/palette';
