--- a/scss/style.scss
+++ b/scss/style.scss
@@ -72,6 +72,7 @@
   @import 'components/content/create';
   @import 'components/content/action-columns';
   @import 'components/content/social-media';
+  @import 'components/content/icon-section';
 
   @import 'components/media/img';
   @import 'components/media/figure';
