Hide pulse demo by default

--- a/scss/components/server/_pulse.scss
+++ b/scss/components/server/_pulse.scss
@@ -5,3 +5,13 @@
 .pulse.initialized.error {
   display: block;
 }
+
+.pulse-demo {
+  display: none;
+  visibility: hidden;
+
+  &.initialized {
+    display: block;
+    visibility: visible;
+  }
+}
