--- a/scss/style.scss
+++ b/scss/style.scss
@@ -36,6 +36,7 @@
   @import 'components/html/list';
   @import 'components/html/button';
   @import 'components/html/table';
+  @import 'components/html/pre';
 
   @import 'layouts/main';
   @import 'layouts/header';
