--- a/scss/style.scss
+++ b/scss/style.scss
@@ -60,6 +60,7 @@
   @import 'components/navigation/breadcrumbs';
   @import 'components/navigation/panel-link';
   @import 'components/navigation/page-actions';
+  @import 'components/navigation/sequence';
 
   @import 'components/content/error';
   @import 'components/content/messages';
