Applying basic styles to <caption>

--- a/scss/components/html/_table.scss
+++ b/scss/components/html/_table.scss
@@ -4,10 +4,10 @@ table {
   width: calc(100% + 2em);
 }
 
-tcaption {
-  display: block;
+caption {
   font-family: 'Fontin Sans Small Caps';
-  margin: 2em 0 1em 0;
+  margin: 2em 0 0.618em 0;
+  text-align: left;
 }
 
 th, td {
