--- a/scss/components/html/_table.scss
+++ b/scss/components/html/_table.scss
@@ -11,7 +11,7 @@ table {
 caption {
   counter-increment: thefifthworld-tables;
   font-family: 'Fontin Sans Small Caps';
-  margin: 2em 0 0.618em 0;
+  margin: 2em 1em 0.618em 1em;
   text-align: left;
 
   &:before {
