--- a/scss/style.scss
+++ b/scss/style.scss
@@ -75,6 +75,7 @@
   @import 'components/content/action-columns';
   @import 'components/content/social-media';
   @import 'components/content/icon-section';
+  @import 'components/content/infobox';
 
   @import 'components/media/img';
   @import 'components/media/figure';
