Responding to wider screens

--- a/scss/components/content/_infobox.scss
+++ b/scss/components/content/_infobox.scss
@@ -15,4 +15,20 @@
     background: $brown16;
     margin-bottom: 0.382em;
   }
+
+  @media (min-width: 50em) {
+    border-spacing: 0 0.382em;
+    display: table;
+    margin-left: -1.618em;
+    margin-right: -1.618em;
+    width: calc(100% + 3.236em);
+
+    & > div {
+      display: table-row;
+    }
+
+    dt, dd {
+      display: table-cell;
+    }
+  }
 }
